<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".appFeatures.addAd.ui.AddAdProducFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingHorizontal="16dp"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/product_details"
        android:id="@+id/tv_productDetailsLabel"
        android:textColor="@color/main_app_color"
        android:textAppearance="@style/montserrat_semi_bold_15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/bg_dahs"
        android:id="@+id/view_productDetailsSP"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_productDetailsLabel"
        />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_section"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="14dp"
            android:background="@android:color/transparent"
            android:dropDownVerticalOffset="50dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="@id/tvin_section"
            app:layout_constraintEnd_toEndOf="@+id/tvin_section"
            app:layout_constraintStart_toStartOf="@id/tvin_section"
            app:layout_constraintTop_toTopOf="@id/tvin_section" />

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvin_section"
        style="@style/textInputLayoutStyle"
        android:layout_marginTop="24dp"
        android:hint="@string/section"
        android:layout_width="match_parent"
        android:nextFocusForward="@id/tvin_password"
        app:placeholderText="@string/choose_section"
        app:layout_constraintTop_toBottomOf="@id/view_productDetailsSP"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textAppearance="@style/montserrat_light_14"
            android:imeOptions="actionNext"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>


        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toTopOf="@id/tvin_section"
        app:layout_constraintEnd_toEndOf="@id/tvin_section"
        android:layout_marginEnd="12dp"
        android:id="@+id/img_chooseProductStatus"
        android:src="@drawable/arrow_drop_down_fill"
        />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_subSection"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="14dp"
            android:background="@android:color/transparent"
            android:dropDownVerticalOffset="50dp"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tvin_subSection"
            app:layout_constraintEnd_toEndOf="@id/tvin_subSection"
            app:layout_constraintStart_toStartOf="@id/tvin_subSection"
            app:layout_constraintTop_toTopOf="@id/tvin_subSection" />


        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvin_subSection"
        style="@style/textInputLayoutStyle"
        android:layout_marginTop="24dp"
        android:hint="@string/sun_section"
            android:visibility="gone"
        android:layout_width="match_parent"
        android:nextFocusForward="@id/tvin_password"
        app:placeholderText="@string/choose_sub_section"
        app:layout_constraintTop_toBottomOf="@id/tvin_section"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_subSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textAppearance="@style/montserrat_light_14"
            android:imeOptions="actionNext"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>


        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toTopOf="@id/tvin_subSection"
        app:layout_constraintEnd_toEndOf="@id/tvin_subSection"
        android:layout_marginEnd="12dp"
            android:visibility="gone"
        android:id="@+id/img_chooseSubSection"
        android:src="@drawable/arrow_drop_down_fill"
        />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvin_adDescription"
            style="@style/textInputLayoutStyle"
            android:layout_marginTop="24dp"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:nextFocusForward="@id/tvin_password"
            app:placeholderText="@string/enter_ad_description"
            app:layout_constraintTop_toBottomOf="@id/tvin_subSection"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_adDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                android:maxLines="8"
                android:gravity="top"
                android:paddingTop="20dp"
                android:textAppearance="@style/montserrat_light_14"
                android:imeOptions="actionNext"
                android:inputType="textImeMultiLine|textMultiLine"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvin_releaseDate"
            style="@style/textInputLayoutStyle"
            android:layout_marginTop="24dp"
            android:hint="@string/release_year"
            android:layout_width="match_parent"
            android:nextFocusForward="@id/tvin_password"
            app:placeholderText="@string/enter_release_year"
            app:layout_constraintTop_toBottomOf="@id/tvin_adDescription"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_releaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textAppearance="@style/montserrat_light_14"
                android:imeOptions="actionNext"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvin_address"
            style="@style/textInputLayoutStyle"
            android:layout_marginTop="24dp"
            android:hint="@string/address"
            android:layout_width="match_parent"
            android:nextFocusForward="@id/tvin_password"
            app:placeholderText="@string/enter_address"
            app:layout_constraintTop_toBottomOf="@id/tvin_releaseDate"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textAppearance="@style/montserrat_light_14"
                android:imeOptions="actionNext"
                android:inputType="textImeMultiLine|textMultiLine"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/product_mages"
            android:id="@+id/tv_productImagesLabel"
            android:textColor="@color/main_app_color"
            app:layout_constraintTop_toBottomOf="@id/tvin_address"
            android:textAppearance="@style/montserrat_semi_bold_15"
            app:layout_constraintStart_toStartOf="parent"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/bg_dahs"
            android:id="@+id/view_productImagesSP"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_productImagesLabel"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/_5_photos_max"
            android:id="@+id/tv_max5ImagesLabel"
            android:textColor="@color/auro_metal_saurus"
            app:layout_constraintTop_toBottomOf="@id/view_productImagesSP"
            android:textAppearance="@style/montserrat_regular_12"
            app:layout_constraintStart_toStartOf="parent"

            />



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="156dp"
            android:layout_height="109dp"
            android:layout_marginTop="24dp"
            android:id="@+id/linear_addImage"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_max5ImagesLabel"
            app:layout_constraintStart_toStartOf="@id/tv_max5ImagesLabel"
            android:background="@drawable/bg_green_dahs"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gallery"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/montserrat_semi_bold_12"
                android:textColor="@color/rich_black"
                android:text="@string/choose_image"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_listOfImages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linear_addImage"
            app:layout_constraintTop_toBottomOf="@+id/linear_addImage" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_publish"
            style="@style/mainButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:text="@string/publish"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintTop_toBottomOf="@id/linear_addImage"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>