<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appFeatures.auth.ui.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:id="@+id/img_header"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/aa_header"
            />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_right_line"
            android:layout_marginTop="55dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@id/img_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_forgot_password"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textAppearance="@style/montserrat_bold_16"
                android:text="@string/forgot_password_2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textAlignment="center"
                android:lineSpacingExtra="5dp"
                android:textColor="@color/auro_metal_saurus"
                android:textAppearance="@style/montserrat_regular_14"
                android:text="@string/please_enter_your_account_username_and_email_address"
                />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvin_userName"
            style="@style/textInputLayoutStyle"
            android:layout_marginTop="38dp"
            android:hint="@string/user_name_req"
            android:visibility="gone"
            android:layout_marginHorizontal="16dp"
            android:nextFocusForward="@id/tvin_email"
            app:placeholderText="@string/enter_user_name"
            app:layout_constraintTop_toBottomOf="@id/img_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/montserrat_light_14"
                android:imeOptions="actionNext"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvin_email"
            style="@style/textInputLayoutStyle"
            android:layout_marginTop="40dp"
            android:hint="@string/email_req"
            android:nextFocusForward="@id/tvin_mobileNumber"
            android:textDirection="locale"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvin_userName"
            app:placeholderText="example@gmail.com">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/montserrat_light_14" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_resetPassword"
            style="@style/mainButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:text="@string/reset_password"
            android:layout_marginTop="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toBottomOf="@id/tvin_email"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>