<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:src="@drawable/sent_done"
        android:id="@+id/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/tv_title"
        android:lineSpacingExtra="4dp"
        android:textColor="@color/rich_black"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:textAppearance="@style/montserrat_semi_bold_20"
        android:text="@string/bidding_done"
        />


    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:layout_marginHorizontal="50dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/this_ad_has_been_successfully_outbid_you_can_browse_your_bidding_list"
        android:textAppearance="@style/montserrat_regular_14"
        android:textColor="@color/auro_metal_saurus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_biddingList"
        style="@style/mainButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:text="@string/bidding_list"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        />

</androidx.constraintlayout.widget.ConstraintLayout>